修改about和git基本原理
Signed-off-by: kwy126 <kewy126@126.com>

--- a/_posts/2017-03-04-Git基本原理和操作命令.md
+++ b/_posts/2017-03-04-Git基本原理和操作命令.md
@@ -172,19 +172,49 @@ git status
 
 ```
 
+
 **notes**
 
-* 当在主分支中创建readme.txt,然后切换到hotfix分支中，这是没错误的
+* 当在主分支中创建readme.txt,然后切换到hotfix分支中，这是没错误的，因此此时hotfix库为空的(库中并没有readme.txt)，所以并不会和工作区中的readme.txt发生冲突
 
-* 
+* 接着hotfix分支对readme.txt内容进行修改，并commit，然后checkout 到master分支，此时也不会出错
+
+* 然后在master分支对readme.txt内容进行修改，但是没有进行commit（即使执行add命令），接着checkout到hotfix分支，此时会报错，因为，不同版本分支对应同一个工作区和暂存区，如果上一个版本都一个两个版本都有的内容进行修改，但是没有进行commit，然后，进行checkout操作，如果这个操作不报错的话，会导致上一个分支对内容修改的丢失
+
+
+
+针对这个问题，有以下几种方法来解决：
+
+* 把本地变更（commit），再切换分支
+
+* 把本地变更储藏（stash）起来，再切换分支，切换前的状态可以在checkout回来之后执行stash apply恢复
+
+* 丢失本地变更，使用-f参数强制checkout（不建议这么做）
 
 
 
 5. 合并分支
 
+    合并有两种方式：
+
+    * merge：把两个分支的最新快照和以及两者最近的共同祖先进行三方合并，合并的结果是生成一个新的快照（并提交，如果没有冲突的话）
+
+    * rebase ：提取目标分支引入的补丁和修改，然后在当前分支的基础上依次在应用一次
+
 6. 远程分支
 
-﻿
+如果你要本地所有分支（不包括tags分支）变更都推送到远程仓库，那么可以使用**--all参数**
+
+<pre>git push <remote> --all</pre>
+
+如果要推送tags分支
+
+<pre>git push <remote> --tags</pre>
+
+如果推送某一分支
+
+<pre>git push <remote> <branch> </pre>
+
 
 
 
