修改Git基本原理
Signed-off-by: kwy126 <kewy126@126.com>

--- a/_posts/2017-03-04-Git基本原理和操作命令.md
+++ b/_posts/2017-03-04-Git基本原理和操作命令.md
@@ -203,7 +203,7 @@ git status
 
 6. 远程分支
 
-如果你要本地所有分支（不包括tags分支）变更都推送到远程仓库，那么可以使用**--all参数**
+如果你要本地所有分支（不包括tags分支）变更都推送到远程仓库，那么可以使用--all参数
 
 <pre>git push <remote> --all</pre>
 
