--- a/_posts/2017-03-04-Git基本原理和操作命令.md
+++ b/_posts/2017-03-04-Git基本原理和操作命令.md
@@ -203,17 +203,16 @@ git status
 
 6. 远程分支
 
-如果你要本地所有分支（不包括tags分支）变更都推送到远程仓库，那么可以使用--all参数
-
-<pre>git push <remote> --all</pre>
+如果你要本地所有分支（不包括tags分支）变更都推送到远程仓库
+git push <remote> --all
 
 如果要推送tags分支
 
-<pre>git push <remote> --tags</pre>
+git push <remote> --tags
 
 如果推送某一分支
 
-<pre>git push <remote> <branch> </pre>
+git push <remote> <branch> 
 
 
 
